--- a/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
@@ -33,7 +33,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="655.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gha-fR-lHT">
-                                        <rect key="frame" x="40" y="100" width="202" height="63"/>
+                                        <rect key="frame" x="120" y="150" width="202" height="63"/>
                                         <attributedString key="attributedText">
                                             <fragment content="꾸준하게 키워가는  나의 문해력">
                                                 <attributes>
@@ -45,24 +45,24 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home" translatesAutoresizingMaskIntoConstraints="NO" id="eAW-C6-x8X">
-                                        <rect key="frame" x="368" y="100" width="400" height="400"/>
+                                        <rect key="frame" x="318" y="70" width="400" height="400"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="eAW-C6-x8X" secondAttribute="height" multiplier="1:1" id="5Vw-Wo-cdp"/>
                                             <constraint firstAttribute="height" constant="400" id="S5V-I1-aVA"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문장 분석하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOI-43-5JX">
-                                        <rect key="frame" x="40" y="273" width="104" height="22.5"/>
+                                        <rect key="frame" x="120" y="273" width="108.5" height="21"/>
                                         <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXB-4F-sME">
-                                        <rect key="frame" x="20" y="303.5" width="648" height="351.5"/>
+                                        <rect key="frame" x="120" y="302" width="528" height="286.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어떤 문장을 분석해드릴까요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9s-5L-7Zj">
-                                                <rect key="frame" x="40" y="20" width="195.5" height="20"/>
-                                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="17"/>
+                                                <rect key="frame" x="40" y="20" width="167.5" height="15.5"/>
+                                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="14"/>
                                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -77,21 +77,21 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="vXB-4F-sME" secondAttribute="trailing" constant="100" id="Cb5-TT-JCa"/>
-                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="100" id="KO8-hh-qqp"/>
-                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="40" id="KgB-O9-UPm"/>
-                                    <constraint firstItem="SOI-43-5JX" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="40" id="TsQ-TQ-Ov4"/>
+                                    <constraint firstAttribute="trailing" secondItem="vXB-4F-sME" secondAttribute="trailing" constant="120" id="Cb5-TT-JCa"/>
+                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="150" id="KO8-hh-qqp"/>
+                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="120" id="KgB-O9-UPm"/>
+                                    <constraint firstItem="SOI-43-5JX" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="120" id="TsQ-TQ-Ov4"/>
                                     <constraint firstItem="vXB-4F-sME" firstAttribute="top" secondItem="SOI-43-5JX" secondAttribute="bottom" constant="8" symbolic="YES" id="UQO-w7-CKr"/>
-                                    <constraint firstItem="vXB-4F-sME" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="20" symbolic="YES" id="ZQs-Jg-1Wj"/>
-                                    <constraint firstItem="eAW-C6-x8X" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="100" id="qbG-zr-MY2"/>
-                                    <constraint firstItem="SOI-43-5JX" firstAttribute="top" secondItem="Gha-fR-lHT" secondAttribute="bottom" constant="110" id="wZr-vo-cqD"/>
-                                    <constraint firstAttribute="trailing" secondItem="eAW-C6-x8X" secondAttribute="trailing" id="zhE-0C-h54"/>
+                                    <constraint firstItem="vXB-4F-sME" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="120" id="ZQs-Jg-1Wj"/>
+                                    <constraint firstItem="eAW-C6-x8X" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="70" id="qbG-zr-MY2"/>
+                                    <constraint firstItem="SOI-43-5JX" firstAttribute="top" secondItem="Gha-fR-lHT" secondAttribute="bottom" constant="60" id="wZr-vo-cqD"/>
+                                    <constraint firstAttribute="trailing" secondItem="eAW-C6-x8X" secondAttribute="trailing" constant="50" id="zhE-0C-h54"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_sen" translatesAutoresizingMaskIntoConstraints="NO" id="AdD-ez-nBD">
-                                <rect key="frame" x="50" y="735.5" width="668" height="200"/>
+                                <rect key="frame" x="50" y="735.5" width="668" height="160"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="kpD-au-aOL"/>
+                                    <constraint firstAttribute="height" constant="160" id="kpD-au-aOL"/>
                                 </constraints>
                             </imageView>
                         </subviews>
